fix(tweaks/disable-videos-column): column was visible on small screen size

--- a/src/tweaks/disable-videos-column.css
+++ b/src/tweaks/disable-videos-column.css
@@ -1,4 +1,5 @@
-#columns #secondary {
+#columns #secondary,
+#related {
   display: none !important;
 }
 
